sm/mongo_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  labels:
    name: sample-sm-mongo
  name: sample-sm-mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    deploymentconfig: sample-sm-mongo
