sm/sample_sm_admin_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  creationTimestamp: 2015-12-16T15:04:24Z
  labels:
    app: sample-sm-admin
  name: sample-sm-admin
  namespace: test
spec:
  ports:
  - name: admin-api
    nodePort: 0
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deploymentconfig: sample-sm
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
