sm/sample_sm_route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  labels:
    app: sample-sm
  name: sample-sm
  namespace: demo
spec:
  host: sample-sm.demo.apps.opsv3.cloudcomplab.ch
  to:
    kind: Service
    name: sample-sm
status: {}
